tests/expectations/parser/program/illegal_import_fail.out
Error [EPAR0370005]: expected '@', 'struct', 'async', 'const', 'function', 'import', 'inline', 'program', 'script', 'transition' -- found 'stub'
    --> test:2:1
     |
   2 | stub credits.aleo {
     | ^^^^
